@@ -9,6 +9,7 @@ xine-lib (1.1.16) 2008-??-??
   * Correct AAC channel ordering for multi-channel audio, at least for FLAC
     when using ALSA or PulseAudio. (Needs a proper fix.)
   * Add position-based seeking independent from seekpoints.
+  * Fix some XCB Xv attribute configuration breakage.
 
 xine-lib (1.1.15) 2008-08-14
   * Security fixes:
